--- a/Converter/Converter.csproj
+++ b/Converter/Converter.csproj
@@ -31,10 +31,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b9a188c8922137c6">
+      <Package>monodevelop</Package>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Properties\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FileManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <None Include="Properties\Newtonsoft.Json.pdb" />
+    <None Include="Properties\Newtonsoft.Json.dll" />
+    <None Include="Properties\Newtonsoft.Json.xml" />
+  </ItemGroup>
 </Project>
