--- a/Converter/Converter.csproj
+++ b/Converter/Converter.csproj
@@ -44,6 +44,7 @@
     <Compile Include="FileManager.cs" />
     <Compile Include="RateManager.cs" />
     <Compile Include="ConvertInfo.cs" />
+    <Compile Include="UserInput.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
